fix alignment of billing information

--- a/BIRForm/newBill.css
+++ b/BIRForm/newBill.css
@@ -1271,7 +1271,7 @@
 	font-family:Arial, sans-serif;
 	mso-font-charset:0;
 	mso-number-format:General;
-	text-align:center;
+	text-align:left;
 	vertical-align:bottom;
 	background:#D8D8D8;
 	mso-pattern:white none;
